-------------------------------------

Package org.springframework.osgi.io
* fixed incorrect parsing of headers specifying version ranges
* improved handling of Require-Bundle header (with regards to quotes and ranges)
* fixed handling of required bundles that do not export packages

Package org.springframework.osgi.mock
* improved dependency between MockBundleContext and the bundle it returns


Changes in version 1.1.0 final (2008-07-04)
-------------------------------------------

General
* removed deprecated items
* improved project Maven dependencies
* distribution contains Jetty/Tomcat activator sources
* upgraded to Knopflerfish 2.1.0
* improved simple-web-app sample

Package org.springframework.osgi.extensions.annotation
* added attribute for collection greedy-proxying

Package org.springframework.osgi.extender
* improved shutdown ordering algorithm to consider published ApplicationContext
* fixed bug that prevented the shutdownTaskExecutor option from being used
* removed support for extender configuration at META-INF/spring
* fixed deadlock with failed contexts during shutdown
* fixed reading of system property for enabling global annotation scanning
* fixed incomplete initialization of annotation BeanPostProcessor

Package org.springframework.osgi.service
* removed deprecation from AbstractOsgiServiceImportFactoryBean to maintain backwards compatibility
* removed package visible methods from AbstractOsgiServiceImportFactoryBean
* removed deprecated exporter base class AbstractOsgiServiceExporter
* fixed validation during export of non-singleton beans

Package org.springframework.osgi.test
* removed deprecated #getPlatformProperties() method from platforms classes

Package org.springframework.osgi.web
* removed support for extender configuration at META-INF/spring
* improved war scanner Servlet 2.5 compliance (by considering as WARs only bundles with ".war" extension)


Changes in version 1.1.0 RC1 (2008-06-24)
-----------------------------------------
