@@ -11,8 +11,9 @@
     <packaging>jar</packaging>
     <name>Spring OSGi Integration Tests (Java 5)</name>
     <url>http://www.springframework.org/osgi</url>
+    
+    
     <dependencies>
-  
         <dependency>
             <groupId>org.springframework.osgi</groupId>
             <artifactId>spring-osgi-core</artifactId>
@@ -79,6 +80,13 @@
 
     <build>
         <plugins>
+		  <plugin>
+			<artifactId>maven-deploy-plugin</artifactId>
+			<configuration>
+			  <skip>true</skip>
+			</configuration>
+		  </plugin>
+        
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<groupId>org.apache.maven.plugins</groupId>
