@@ -237,6 +237,8 @@
 		
     </dependencies>
 
+
+
     <profiles>
         <profile>
             <id>jdk-1.5+</id>
@@ -256,6 +258,13 @@
 
     <build>
         <plugins>
+			  <plugin>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<configuration>
+				  <skip>true</skip>
+				</configuration>
+			  </plugin>
+        
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
