@@ -84,6 +84,7 @@
    <source-jdk>1.4</source-jdk>
    <clover.ver>2.3.1</clover.ver>
    <clover.argLine></clover.argLine>
+   <clover.skip>false</clover.skip>
   </properties>
 
   <!-- ============================================= -->
@@ -99,7 +100,7 @@
 
   <ciManagement>
     <system>bamboo</system>
-    <url>http://build.springframework.org/bamboo/browse/OSGI-TRUNK</url>
+    <url>http://build.springframework.org/browse/OSGI-TRUNK11X</url>
     <notifiers>
       <notifier>
         <type>mail</type>
@@ -118,10 +119,10 @@
 
   <scm>
     <connection>
-      scm:svn:https://springframework.svn.sourceforge.net/svnroot/springframework/spring-osgi/trunk
+      scm:svn:https://springframework.svn.sourceforge.net/svnroot/springframework/spring-osgi/branches/spring-osgi-1.1
     </connection>
     <developerConnection>
-      scm:svn:https://springframework.svn.sourceforge.net/svnroot/springframework/spring-osgi/trunk
+      scm:svn:https://springframework.svn.sourceforge.net/svnroot/springframework/spring-osgi/branches/spring-osgi-1.1
     </developerConnection>
     <url>https://fisheye.springframework.org/browse/spring-osgi</url>
   </scm>
@@ -392,7 +393,9 @@ limitations under the License.
 		  <version>3.8.2</version>
 		</dependency>
   	</dependencies>
+  	
   </dependencyManagement>
+  
   <!-- shared dependencies across modules -->
   <dependencies>
     <!-- junit -->
@@ -448,7 +451,7 @@ limitations under the License.
     
   </dependencies>
   
- <build>
+  <build>
     <extensions>
       <extension>
          <groupId>org.springframework.aws</groupId>
@@ -471,6 +474,59 @@ limitations under the License.
           <artifactId>maven-plugin-plugin</artifactId>
           <version>2.3</version>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+	      <artifactId>maven-deploy-plugin</artifactId>
+	      <version>2.3</version>
+	      <!-- we cannot depend on a snapshot
+	      <version>2.4-SNAPSHOT</version>
+	       -->
+	    </plugin>
+        <plugin>
+	      <groupId>org.apache.felix</groupId>
+    	  <artifactId>maven-bundle-plugin</artifactId>
+          <version>1.4.0</version>
+	    </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.4.3</version>
+	    </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>2.2</version>
+	    </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-war-plugin</artifactId>
+          <version>2.0</version>
+    	</plugin>	    
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>2.4</version>
+	    </plugin>
+        <plugin>
+	      <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jxr-plugin</artifactId>
+		  <version>2.1</version>
+	    </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>jdepend-maven-plugin</artifactId>
+          <version>2.0-beta1</version>
+        </plugin>
+  	    <plugin>
+		  <groupId>org.codehaus.mojo</groupId>
+		  <artifactId>findbugs-maven-plugin</artifactId>
+		  <version>1.2</version>
+        </plugin>
+	    <plugin>
+	      <groupId>com.atlassian.maven.plugins</groupId>
+          <artifactId>maven-clover2-plugin</artifactId>
+          <version>${clover.ver}</version>
+		</plugin>
       </plugins>
     </pluginManagement>
     
@@ -479,7 +535,6 @@ limitations under the License.
        <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
-        <version>1.4.0</version>
         <extensions>true</extensions>
 
         <configuration>
@@ -522,8 +577,8 @@ limitations under the License.
         </configuration>
       </plugin>
       <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-	      <groupId>org.apache.maven.plugins</groupId>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
           <configuration>
             <source>${source-jdk}</source>
             <target>${source-jdk}</target>
@@ -543,16 +598,11 @@ limitations under the License.
       <plugin>
           <groupId>com.atlassian.maven.plugins</groupId>
           <artifactId>maven-clover2-plugin</artifactId>
-          <version>${clover.ver}</version>
           <configuration>
               <licenseLocation>${clover.licenseLocation}</licenseLocation>
               <generatePdf>false</generatePdf>
 			  <generateXml>true</generateXml>
               <generateHtml>true</generateHtml>
-              <!--
-              <flushPolicy>interval</flushPolicy>
-			  <flushInterval>10000</flushInterval>
-			  -->
               <generateHistorical>false</generateHistorical>
               <!-- saving history is problematic since each module would override
               the previous unless a different folder is used for the root
@@ -560,6 +610,7 @@ limitations under the License.
               -->
               <jdk>${source-jdk}</jdk>
               <includesTestSourceRoots>false</includesTestSourceRoots>
+              <skip>${clover.skip}</skip>
 
               <!-- exclusions -->
               <excludes>
@@ -705,19 +756,26 @@ limitations under the License.
 	    <dependency>
  		  <groupId>com.cenqua.clover</groupId>
 		  <artifactId>clover</artifactId>
-		  <version>2.3.1</version>
+		  <version>${clover.ver}</version>
 		  <type>jar</type>
 		  <scope>provided</scope>
         </dependency>
 	  </dependencies>
-	  
+
+	  <!-- 
+	    disabled for now since we don't want them to be deployed
+	    by the nightly build. Version 2.4 of the deploy plugin
+	    has a skip flag but it hasn't been released yet.
+	    
+	    To have both coverage and run the tests, the CI
+	    needs to run two different maven process (as a script).
+
       <modules>
       	<module>integration-tests/tests</module>
-      	<!--
       	<module>integration-tests/tests-tiger</module>
-      	-->
       </modules>
-      
+	  -->      
+	  
     </profile>
   </profiles>
        
@@ -731,9 +789,8 @@ limitations under the License.
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jxr-plugin</artifactId>
-		<version>2.0</version>
         <configuration>
-          <aggregate>false</aggregate>
+          <aggregate>true</aggregate>
         </configuration>
       </plugin>
       <plugin>
@@ -813,9 +870,6 @@ limitations under the License.
             <link>http://tomcat.apache.org/tomcat-5.5-doc/servletapi/</link>
             <link>http://tomcat.apache.org/tomcat-5.5-doc/catalina/docs/api/</link>
             <link>http://www.mortbay.org/apidocs/</link>
-            <!--
-            <link>http://dcl.mathcs.emory.edu/util/backport-util-concurrent/doc/api/</link>
-            -->
           </links>
         </configuration>
       </plugin>
@@ -854,14 +908,9 @@ limitations under the License.
         <artifactId>maven-pmd-plugin</artifactId>
       </plugin>
       
-      <!-- cobertura  (disabled for now)
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>cobertura-maven-plugin</artifactId>
-        <version>2.1</version>
-      </plugin>
-	  -->
-	  <!-- jdepend -->
+      <!-- ============== -->
+      <!--     jDepend    -->
+      <!-- ============== -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>jdepend-maven-plugin</artifactId>
@@ -917,7 +966,6 @@ limitations under the License.
       <url>http://repository.atlassian.com/maven2</url>
     </pluginRepository>    
   </pluginRepositories>
-
 
   <repositories>
     <repository>
