@@ -13,6 +13,9 @@ Package org.springframework.osgi.io
 Package org.springframework.osgi.mock
 * improved dependency between MockBundleContext and the bundle it returns
 
+Package org.springframework.osgi.web
+* DefaultContextPathStrategy allows "/" contexts to be specified through Web-ContextPath header
+* improved encoding of user defined context paths
 
 Changes in version 1.1.0 final (2008-07-04)
 -------------------------------------------
